--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
-    <item
         android:id="@+id/navigation_favourite"
         android:icon="@drawable/ic_baseline_favorite_border_24"
         android:title="@string/favourite" />
@@ -15,5 +10,10 @@
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_baseline_supervisor_account_24"
         android:title="@string/profile" />
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"
+        android:title="@string/logout"
+        />
 
 </menu>
