--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,6 +50,7 @@
         android:includeFontPadding="true"
         android:paddingStart="10dp"
         android:paddingEnd="5dp"
+        android:drawablePadding="8dp"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:background="@drawable/rounded_edit_text"
@@ -64,6 +65,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:drawablePadding="8dp"
         android:background="@drawable/rounded_edit_text"
         android:inputType="textPassword"
         android:includeFontPadding="true"
