--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,6 +31,7 @@
         android:includeFontPadding="true"
         android:paddingStart="10dp"
         android:paddingEnd="5dp"
+        android:drawablePadding="8dp"
         android:background="@drawable/rounded_edit_text"
         android:textColorHint="@color/black"
         android:textStyle="bold"
@@ -50,6 +51,7 @@
         android:includeFontPadding="true"
         android:paddingStart="10dp"
         android:paddingEnd="5dp"
+        android:drawablePadding="8dp"
         android:background="@drawable/rounded_edit_text"
         android:textColorHint="@color/black"
         android:textStyle="bold"
@@ -72,6 +74,7 @@
         android:background="@drawable/rounded_edit_text"
         android:textColorHint="@color/black"
         android:textStyle="bold"
+        android:drawablePadding="8dp"
         android:textColor="@color/black"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
