--- a/app/src/main/res/layout/item_rv.xml
+++ b/app/src/main/res/layout/item_rv.xml
@@ -32,11 +32,11 @@
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                app:layout_constraintTop_toBottomOf="@+id/ivPlace"
                 tools:text="Location" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/ivPlace"
                 android:layout_width="310dp"
                 android:layout_height="170dp"
                 android:layout_marginStart="16dp"
